2007-02-28  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  client-removed has an extra argument; make sure we have it.

2007-02-27  Michael Smith  <msmith@fluendo.com>

	* flumotion/twisted/fdserver.py:
	  Comments to make wingo weep a little less.

2007-02-27  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent010.py:
	  Split removeFDCallback into removeClientCallback and
	  removeFDCallback, attached to client-removed and client-fd-removed,
	  as required for race-free use of multifdsink.

2007-02-27  Michael Smith  <msmith@fluendo.com>

	* flumotion/twisted/fdserver.py:
	  Stream sockets don't guarantee us message boundaries. We can't
	  switch to datagram sockets as they're unreliable. So, provide
	  protocol-level message boundaries for our FD-passing messsages, and
	  strip them out before passing on to PB.
	  Prevents protocol errors when connecting to the feed server under
	  load.

2007-02-27  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Ensure we chain up to our parent when stopping!
	  Possibly fixes some shutdown races.

	* flumotion/component/feedcomponent010.py:
	  Add some debug.

2007-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/wizard.py:
	  Document and comment.  subclass log.Loggable.

2007-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/ui/glade.py:
	  Some easy refactoring.  Create a common GladeBacked class to
	  avoid repeating and diverging code.  Remove an experimental
	  generator method that I can't find any callers of.
	  Document and comment.

2007-02-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/Makefile.am:
	* data/make-dummy-cert:
	* doc/Makefile.am:
	* doc/redhat/make-dummy-cert:
	  move make-dummy-cert to datadir
	* flumotion/configure/configure.py:
	* flumotion/configure/installed.py.in: